--- a/docs/lab/workflow/importing-order.mdx
+++ b/docs/lab/workflow/importing-order.mdx
@@ -8,13 +8,17 @@ import FeatureBeta from '/snippets/feature-beta.mdx';
 
 If you want to track orders with Junction that weren’t originally placed with Junction, you can import an order.
 
+<Warning>
+  It's crucial that imported orders are created with the correct sample ID. This is the **requisition number** or **control number** for Labcorp orders, or the **lab reference ID** for Quest orders. If in doubt, contact your Junction Customer Service Manager to confirm what should supply for the sample ID.
+</Warning>
+
 An imported order can be cancelled, receive results, and functions similarly to orders originally placed with Junction, but with one important exception: a requisition will not be created. This means you cannot use the [endpoint to retrieve the requisition](/api-reference/lab-testing/requisition-pdf) for an imported order since Junction does not have access to it.
 
 After an order is successfully imported, it will be in the `requisition_bypassed` state (for example, an imported testkit order would have a `received.testkit.requisition_bypassed` status). This status supports transitioning to the same states that `requisition_created` does.
 
-<Warning>
-  Note that, since import skips the regular order creation flow, no communications are sent to patients about the order being created, but communications are sent for subsequent events that might occur (order completion, for example).
-</Warning>
+<Info>
+  Since import skips the regular order creation flow, no communications are sent to patients about the order being created, but communications are sent for subsequent events that might occur (order completion, for example).
+</Info>
 
 ### Example
 
