📝 [LAB-1072] Add missing comma to docs

--- a/docs/lab/overview/locations.mdx
+++ b/docs/lab/overview/locations.mdx
@@ -16,7 +16,7 @@ The recommend high level flow for verifying PSC availability at Vital is:
   "central_labs": {
     "labcorp": {
         "within_radius": 5, # number of PSC's within radius of provided zip code
-        "radius": "25" # miles
+        "radius": "25", # miles
         "capabilities": ["stat"] # aggregate list of capabilities provided by PSCs within the radius
     }
   }
