📝 [LAB-1072] Update response example for capabilities array

--- a/docs/api-reference/lab-testing/area-info.mdx
+++ b/docs/api-reference/lab-testing/area-info.mdx
@@ -105,7 +105,8 @@ fmt.Printf("Received data %s\n", response)
     "labcorp": {
       "patient_service_centers": {
         "within_radius": 5,
-        "radius": "25"
+        "radius": "25",
+        "capabilities": ["stat"]
       }
     }
   }
