--- a/docs/api-reference/lab-testing/order-psc-info.mdx
+++ b/docs/api-reference/lab-testing/order-psc-info.mdx
@@ -91,6 +91,7 @@ fmt.Printf("Received data %s\n", response)
         "hours": null
       },
       "distance": "25",
+      "capabilities": ["stat"]
     },
   ]
 }
