--- a/docs/api-reference/lab-testing/psc-info.mdx
+++ b/docs/api-reference/lab-testing/psc-info.mdx
@@ -105,7 +105,8 @@ fmt.Printf("Received data %s\n", response)
         "fax_number": "844-346-5903",
         "hours": null
       },
-      "distance": "25"
+      "distance": "25",
+      "capabilities": ["stat"]
     },
   ]
 }
