--- a/docs/changelog/wearables/api.mdx
+++ b/docs/changelog/wearables/api.mdx
@@ -4,6 +4,29 @@ title: "API"
 
 import HorizonAIBeta from '/snippets/horizon-ai-beta.mdx';
 
+### Device metadata and source device tracking (August 2025)
+
+We have added device tracking with new API endpoints and enhanced data attribution.
+Data payloads now include source_device_id when the originating device can be determined, enabling better tracking and device-specific analytics.
+
+<Accordion icon="devices" iconType="duotone" title="Details" defaultOpen>
+
+The new [Get User Devices](/api-reference/data/device/get-devices) and [Get Device Details](/api-reference/data/device/get-device) endpoints allow you to retrieve detailed device information for connected users.
+
+We've also added [Provider Device Created](/event-catalog/provider.device.created) and [Provider Device Updated](/event-catalog/provider.device.updated) webhook events to notify you when device information becomes available or changes.
+
+#### Enhanced Data Attribution
+
+Data payloads now include `source_device_id` whenever the originating device is known with certainty. This currently applies to:
+
+- **Withings**: Device metadata embedded in payloads
+- **Polar**: Device metadata embedded in payloads
+- **Single-device connections**: For all other providers where exactly one device is registered
+
+This enables better data source tracking and device-specific analytics for your applications.
+</Accordion>
+
+
 ### Detecting password expiration in password-based connections (July 2025)
 
 The [Link Password Provider endpoint](/api-reference/link/link-password-provider), the [Get User Connections endpoint](/api-reference/user/get-users-connected-providers)
