review comments addressed round 2

--- a/docs/api-reference/data/device/get-device.mdx
+++ b/docs/api-reference/data/device/get-device.mdx
@@ -7,7 +7,7 @@ openapi: "GET /v2/user/{user_id}/device/{device_id}"
 
 ```bash Shell
 curl --request GET \
-     --url {{BASE_URL}}/v2/user/{user_id}/device \
+     --url {{BASE_URL}}/v2/user/{user_id}/device/{device_id} \
      --header 'Accept: application/json' \
      --header 'x-vital-api-key: <API_KEY>'
 ```
