--- a/docs/lab/walk-in/overview.mdx
+++ b/docs/lab/walk-in/overview.mdx
@@ -11,7 +11,7 @@ To achieve this, a high-level overview of the process is defined as:
 
 - An order is placed in Vital's system through our Dashboard or API.
 - The order is added to a background queue and additional checks are made before a test requisition is created with the chosen Laboratory.
-- After the requisition is created, some form of communication is carried out with the patient so he can go to the assigned partner Laboratory.
+- After the requisition is created, some form of communication is carried out with the patient so they can go to the assigned partner Laboratory.
 - After that, the patient can go at any time they want to the laboratory to have their blood drawn.
 - The Laboratory processes the patient's blood sample and generates the required results.
 - Vital exposes the results via API as soon as they are available, both on PDF and structured data via API.
