--- a/docs/lab/workflow/lab-test-lifecycle.mdx
+++ b/docs/lab/workflow/lab-test-lifecycle.mdx
@@ -91,6 +91,7 @@ Below is a full list of all the available statuses by test modality. The names s
 - `collecting_sample.walk_in_test.appointment_pending`
 - `collecting_sample.walk_in_test.appointment_scheduled`
 - `collecting_sample.walk_in_test.appointment_cancelled`
+- `collecting_sample.walk_in_test.redraw_available` (currently in beta testing)
 - `sample_with_lab.walk_in_test.partial_results`
 - `completed.walk_in_test.completed`
 - `failed.walk_in_test.sample_error`
